Change colors and header.

--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="Gym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gym | Template</title>
+    <title>Move Up Online</title>
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800;900&display=swap&subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap&subset=latin-ext" rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -41,12 +41,12 @@
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">About Us</a></li>
-                <li><a href="./class-details.html">Classes</a></li>
-                <li><a href="./services.html">Services</a></li>
-                <li><a href="./team.html">Our Team</a></li>
-                <li><a href="#">Pages</a>
+                <li><a href="./index.html">ANA SAYFA</a></li>
+                <li><a href="./about-us.html">BİZ KİMİZ</a></li>
+                <!-- <li><a href="./classes.html">Classes</a></li> -->
+                <!-- <li><a href="./services.html">Services</a></li> -->
+                <!-- <li><a href="./team.html">Our Team</a></li> -->
+                <!-- <li><a href="#">Pages</a>
                     <ul class="dropdown">
                         <li><a href="./about-us.html">About us</a></li>
                         <li><a href="./class-timetable.html">Classes timetable</a></li>
@@ -56,8 +56,8 @@
                         <li><a href="./blog.html">Our blog</a></li>
                         <li><a href="./404.html">404</a></li>
                     </ul>
-                </li>
-                <li><a href="./contact.html">Contact</a></li>
+                </li> -->
+                <li><a href="./contact.html">İLETİŞİM</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -84,12 +84,12 @@
                 <div class="col-lg-6">
                     <nav class="nav-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">About Us</a></li>
-                            <li><a href="./class-details.html">Classes</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./team.html">Our Team</a></li>
-                            <li><a href="#">Pages</a>
+                            <li><a href="./index.html">Ana Sayfa</a></li>
+                            <li><a href="./about-us.html">Hakkımızda</a></li>
+                            <!-- <li><a href="./class-details.html">Classes</a></li> -->
+                            <!-- <li><a href="./services.html">Services</a></li> -->
+                            <!-- <li><a href="./team.html">Our Team</a></li> -->
+                            <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./about-us.html">About us</a></li>
                                     <li><a href="./class-timetable.html">Classes timetable</a></li>
@@ -99,8 +99,8 @@
                                     <li><a href="./blog.html">Our blog</a></li>
                                     <li><a href="./404.html">404</a></li>
                                 </ul>
-                            </li>
-                            <li class="active"><a href="./contact.html">Contact</a></li>
+                            </li> -->
+                            <li class="active"><a href="./contact.html">İletişim</a></li>
                         </ul>
                     </nav>
                 </div>
