Apply some adjustments

--- a/index.html
+++ b/index.html
@@ -133,22 +133,9 @@
                     <div class="row">
                         <div class="col-lg-6 offset-lg-6">
                             <div class="hi-text">
-                                <span>Shape your body</span>
-                                <h1>Be <strong>strong</strong> traning hard</h1>
-                                <a href="#" class="primary-btn">Get info</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="hs-item set-bg" data-setbg="img/hero/hero-2.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-6 offset-lg-6">
-                            <div class="hi-text">
-                                <span>Shape your body</span>
-                                <h1>Be <strong>strong</strong> traning hard</h1>
-                                <a href="#" class="primary-btn">Get info</a>
+                                <span>Daha iyi bir sen için</span>
+                                <h1>Hareket <strong>kapasiteni</strong> geliştir</h1>
+                                <a href="#" class="primary-btn">Bilgi al</a>
                             </div>
                         </div>
                     </div>
@@ -164,8 +151,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Why chose us?</span>
-                        <h2>PUSH YOUR LIMITS FORWARD</h2>
+                        <span>Neden bizi seçmelisiniz?</span>
+                        <h2>DAHA İYİ BİR SEN İÇİN</h2>
                     </div>
                 </div>
             </div>
@@ -173,33 +160,29 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-034-stationary-bike"></span>
-                        <h4>Modern equipment</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            dolore facilisis.</p>
+                        <h4>Hedeflerinize ulaşalım</h4>
+                        <p>İhtiyaçlarınıza göre hazırlanmış antrenmanlarımız<br>ile hedeflerinize ulaşalım.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-033-juice"></span>
-                        <h4>Healthy nutrition plan</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-                            facilisis.</p>
+                        <h4>Postürünüzü düzeltin</h4>
+                        <p>Doğru duruşu destekleyen egzersizlerle fiziksel görünümünü iyileştir<br>ve hareket özgürlüğünü artır.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-002-dumbell"></span>
-                        <h4>Proffesponal training plan</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            dolore facilisis.</p>
+                        <h4>Harekete teşvik</h4>
+                        <p>Kendin için bir adım at.<br>Başlangıç için biz buradayız.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-014-heart-beat"></span>
-                        <h4>Unique to your needs</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-                            facilisis.</p>
+                        <h4>Kardiyovasküler egzersizler</h4>
+                        <p>Dayanıklılığını arttır<br>ve kalbini güçlendir.</p>
                     </div>
                 </div>
             </div>
@@ -213,8 +196,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Our Classes</span>
-                        <h2>WHAT WE CAN OFFER</h2>
+                        <span>Hizmetlerimiz</span>
+                        <h2>NELER SUNUYORUZ?</h2>
                     </div>
                 </div>
             </div>
@@ -225,9 +208,9 @@
                             <img src="img/classes/class-1.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>STRENGTH</span>
-                            <h5>Weightlifting</h5>
-                            <a href="#"><i class="fa fa-angle-right"></i></a>
+                            <!-- <span>STRENGTH</span> -->
+                            <h5>Kuvvet Antrenmanları</h5>
+                            <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -237,9 +220,9 @@
                             <img src="img/classes/class-2.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>Cardio</span>
-                            <h5>Indoor cycling</h5>
-                            <a href="#"><i class="fa fa-angle-right"></i></a>
+                            <!-- <span>Cardio</span> -->
+                            <h5>Mat Pilates Dersleri</h5>
+                            <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -249,33 +232,47 @@
                             <img src="img/classes/class-3.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>STRENGTH</span>
-                            <h5>Kettlebell power</h5>
-                            <a href="#"><i class="fa fa-angle-right"></i></a>
+                            <!-- <span>STRENGTH</span> -->
+                            <h5>HIIT Antrenmanları</h5>
+                            <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
                     <div class="class-item">
                         <div class="ci-pic">
-                            <img src="img/classes/class-4.jpg" alt="">
+                            <img src="img/classes/class-1.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>Cardio</span>
-                            <h4>Indoor cycling</h4>
-                            <a href="#"><i class="fa fa-angle-right"></i></a>
+                            <!-- <span>STRENGTH</span> -->
+                            <h5>Postürel Egzersizler</h5>
+                            <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-4 col-md-6">
                     <div class="class-item">
                         <div class="ci-pic">
-                            <img src="img/classes/class-5.jpg" alt="">
+                            <img src="img/classes/class-2.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>Training</span>
-                            <h4>Boxing</h4>
-                            <a href="#"><i class="fa fa-angle-right"></i></a>
+                            <!-- <span>Cardio</span> -->
+                            <h5>Koşu Etkinlikleri</h5>
+                            <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="class-item">
+                        <div class="ci-pic">
+                            <img src="img/classes/class-3.jpg" alt="">
+                        </div>
+                        <div class="ci-text">
+                            <!-- <span>STRENGTH</span> -->
+                            <h5>Detoks Günleri</h5>
+                            <!-- <a href="#"><i class="fa fa-angle-right"></i></a> -->
                         </div>
                     </div>
                 </div>
